--- a/config/database.yml
+++ b/config/database.yml
@@ -25,5 +25,12 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+ # <<: *default
+ # database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  pool: 5
+  username: root
+  password:
+  host: localhost
+  database: grouperbeta_production
