--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore bundler config.
+/config/initializers/carrierwave.rb
 /.bundle
 
 # Ignore the default SQLite database.
